tests/snapshots/lib_test__from_snapshots@chargeback_deposit_dispute.csv.snap
---
source: tests/lib_test.rs
expression: "String::from(csv) + \"\\n\" + &lines.sorted().join(\"\\n\")"
input_file: tests/csv_inputs/chargeback_deposit_dispute.csv
---
client,available,held,total,locked
1,0.0000,0.0000,0.0000,true
