tests/snapshots/lib_test__from_snapshots@deposit_withdrawal.csv.snap
---
source: tests/lib_test.rs
expression: "String::from(csv) + \"\\n\" + &lines.sorted().join(\"\\n\")"
input_file: tests/csv_inputs/deposit_withdrawal.csv
---
client,available,held,total,locked
1,1.5,0.0000,1.5,false
2,2,0.0000,2,false
