tests/snapshots/lib_test__from_snapshots@resolve_non_dispted.csv.snap
---
source: tests/lib_test.rs
expression: "String::from(csv) + \"\\n\" + &lines.sorted().join(\"\\n\")"
input_file: tests/csv_inputs/resolve_non_dispted.csv
---
client,available,held,total,locked
1,1,0.0000,1,false
